Fix URL wrap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,6 +39,7 @@ p a {
   transition:
     0.375s,
     background-position 0s;
+  word-break: break-all;
 
   &:hover {
     --p: 0%;
